<resources>
    <string name="app_name">PigeottoMobile</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="password">Hasło</string>
    <string name="conPassword">Powtórz hasło</string>
    <string name="logIn">Zaloguj się</string>
    <string name="register">Zarejestruj się</string>
    <string name="pigeottoTitle">Pigeotto Mobile</string>

    <string name="returnToLoginScreen">Wróć do panelu logowania</string>
    <string name="registration">Rejestracja</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="emailAdress">Adres e-mail</string>
    <string name="phoneNumber">Nr telefonu</string>
    <string name="logo">Logo</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="photoUpdated">Zdjęcie zostało zaktualizowane</string>
    <string name="profilePhoto">Zdjęcie profilowe</string>
    <string name="edit">Edytuj</string>
    <string name="save">Zapisz</string>
    <string name="leave">Opuść</string>
    <string name="firstName">Imię</string>
    <string name="lastName">Nazwisko</string>

    <string name="dataUpdated">Dane zostały zaktualizowane</string>
    <string name="pleaseAcceptRequiredPermission">Proszę zaakceptować wymagane zezwolenie</string>
    <string name="failedToSaveData">Nie udało się zaktualizować danych</string>

    <string name="youAreNotAllowedToUseOffensiveOrVulgarWords">Nie możesz używać ofensywnych lub wulgarnych słów</string>

</resources>